--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
   "source": "src/index.ts",
   "types": "build/index.d.ts",
   "dependencies": {
-    "@types/express": "^4.17.9",
-    "@types/lodash": "^4.14.167",
-    "@types/passport": "^1.0.5",
-    "apollo-datasource": "^0.7.2",
-    "apollo-server-core": "^2.19.1",
-    "apollo-server-express": "^2.19.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.11",
     "passport": "^0.4.1",
@@ -30,9 +24,15 @@
     "watch-micro": "microbundle-crl watch --no-compress --target node --external util,events,http --format modern,cjs"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/lodash": "^4.14.167",
+    "@types/passport": "^1.0.5",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "apollo-datasource": "^0.7.2",
+    "apollo-server-core": "^2.19.1",
+    "apollo-server-express": "^2.19.1",
     "eslint": "7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -45,8 +45,20 @@
     "rimraf": "^3.0.2",
     "typescript": "4.1.3"
   },
-  "peerDependacies": {},
-  "resolutions": {},
+  "peerDependacies": {
+    "apollo-datasource": "^0.7.2",
+    "apollo-server-core": "^2.19.1",
+    "apollo-server-express": "^2.19.1"
+  },
+  "peerDevDependacies": {
+    "@types/express": "^4.17.9",
+    "@types/passport": "^1.0.5"
+  },
+  "resolutions": {
+    "apollo-datasource": "^0.7.2",
+    "apollo-server-core": "^2.19.1",
+    "apollo-server-express": "^2.19.1"
+  },
   "files": [
     "build"
   ],
