--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "incremental": true,
     "tsBuildInfoFile": "./.buildcache/api.tsbuildinfo",
-    "module": "esnext",
+    "module": "CommonJS",
     "esModuleInterop": true,
     "target": "esnext",
     "noImplicitAny": true,
