--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "import/prefer-default-export": "off",
     "import/extensions": "off",
     "import/no-cycle": "off",
+    "import/no-extraneous-dependencies": ["error", {"peerDependencies": true}],
     "prettier/prettier": [
       "error",
       {
