--- a/.github/workflows/checkcode.yml
+++ b/.github/workflows/checkcode.yml
@@ -21,4 +21,4 @@ jobs:
 
     - run: npm ci
     - run: npm run lint
-    - run: npm run build --if-present
+    - run: npm run build:check --if-present
