--- a/package.json
+++ b/package.json
@@ -16,22 +16,21 @@
     "clean:build:cache": "rimraf build .buildcache",
     "clean": "npm run -s clean:build && npm run -s clean:build:cache",
     "prepublishOnly": "npm run build",
-    "build": "npm run clean && tsc",
-    "watch": "tsc -w",
-    "build-micro": "microbundle-crl --no-compress --target node --external natives --format modern,cjs",
-    "watch-micro": "microbundle-crl watch --no-compress --target node --external util,events,http --format modern,cjs"
+    "build:check": "npm run clean && tsc",
+    "build": "microbundle-crl --no-compress --target node --external natives --format modern,cjs",
+    "watch": "microbundle-crl watch --no-compress --target node --external util,events,http --format modern,cjs"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.167",
     "@types/passport": "^1.0.5",
-    "@types/node": "^14.14.20",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "apollo-datasource": "^0.7.2",
-    "apollo-server-core": "^2.19.1",
-    "apollo-server-express": "^2.19.1",
-    "eslint": "7.17.0",
+    "@types/node": "^14.14.21",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "apollo-datasource": "^0.7.3",
+    "apollo-server-core": "^2.19.2",
+    "apollo-server-express": "^2.19.2",
+    "eslint": "7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-config-recommended": "^4.1.0",
@@ -42,25 +41,25 @@
     "prettier-eslint": "^12.0.0",
     "rimraf": "^3.0.2",
     "typescript": "4.1.3",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.11.12",
     "passport": "^0.4.1"
   },
   "peerDependacies": {
-    "apollo-datasource": "^0.7.2",
-    "apollo-server-core": "^2.19.1",
-    "apollo-server-express": "^2.19.1",
-    "mongoose": "^5.11.11",
+    "apollo-datasource": "^0.7.3",
+    "apollo-server-core": "^2.19.2",
+    "apollo-server-express": "^2.19.2",
+    "mongoose": "^5.11.12",
     "passport": "^0.4.1"
   },
   "peerDevDependacies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.11",
     "@types/passport": "^1.0.5"
   },
   "resolutions": {
-    "apollo-datasource": "^0.7.2",
-    "apollo-server-core": "^2.19.1",
-    "apollo-server-express": "^2.19.1",
-    "mongoose": "^5.11.11",
+    "apollo-datasource": "^0.7.3",
+    "apollo-server-core": "^2.19.2",
+    "apollo-server-express": "^2.19.2",
+    "mongoose": "^5.11.12",
     "passport": "^0.4.1"
   },
   "files": [
