--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "clean": "npm run -s clean:build && npm run -s clean:build:cache",
     "prepublishOnly": "npm run build",
     "build:check": "tsc",
+    "watch": "npm run build && tsc -w",
     "build": "npm run clean && tsc",
     "build-micro": "microbundle-crl --no-compress --target node --external util,events,http --format modern,cjs",
     "watch-micro": "microbundle-crl watch --no-compress --target node --external util,events,http --format modern,cjs"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/lodash": "^4.14.167",
+    "@types/lodash": "^4.14.168",
     "@types/passport": "^1.0.5",
     "@types/node": "^14.14.21",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
