--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "apollo-datasource": "^0.7.3",
     "apollo-server-core": "^2.21.0",
     "apollo-server-express": "^2.21.0",
+    "graphql": "^15.5.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
