--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build"
   ],
   "dependencies": {
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "source-map-support": "^0.5.19"
   },
   "scripts": {
@@ -28,33 +28,33 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.37",
     "@types/passport": "^1.0.6",
-    "@types/node": "^14.14.28",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "apollo-datasource": "^0.7.3",
-    "apollo-server-core": "^2.21.0",
-    "apollo-server-express": "^2.21.0",
-    "graphql": "^15.5.0",
-    "eslint": "7.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "apollo-datasource": "^0.8.0",
+    "apollo-server-core": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
+    "eslint": "7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-recommended": "^4.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "graphql": "^15.5.0",
     "microbundle-crl": "^0.13.11",
+    "mongoose": "^5.12.2",
+    "passport": "^0.4.1",
     "prettier-eslint": "^12.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "4.1.5",
-    "mongoose": "^5.11.16",
-    "passport": "^0.4.1"
+    "typescript": "4.2.3"
   },
   "peerDependacies": {
-    "apollo-datasource": "^0.7.3",
-    "apollo-server-core": "^2.21.0",
-    "apollo-server-express": "^2.21.0",
-    "mongoose": "^5.11.16",
+    "apollo-datasource": "^0.8.0",
+    "apollo-server-core": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
+    "mongoose": "^5.12.2",
     "passport": "^0.4.1"
   },
   "peerDevDependacies": {
@@ -62,10 +62,10 @@
     "@types/passport": "^1.0.6"
   },
   "resolutions": {
-    "apollo-datasource": "^0.7.3",
-    "apollo-server-core": "^2.21.0",
-    "apollo-server-express": "^2.21.0",
-    "mongoose": "^5.11.16",
+    "apollo-datasource": "^0.8.0",
+    "apollo-server-core": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
+    "mongoose": "^5.12.2",
     "passport": "^0.4.1"
   },
   "repository": "schamane/small-graphql-mongoose-middleware",
@@ -80,7 +80,7 @@
   "author": "Nazar Kulyk <schamane@myeburg.net> (https://myeburg.net)",
   "license": "MIT",
   "engines": {
-    "node": "^14",
-    "npm": "^6.14"
+    "node": "^14 || ^15",
+    "npm": "^6.14 || ^7"
   }
 }
