--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
           scope: '@schamane'
       - run: npm ci
       - run: npm publish
