--- a/package.json
+++ b/package.json
@@ -26,46 +26,54 @@
     "watch-micro": "microbundle-crl watch --no-compress --target node --external util,events,http --format modern,cjs"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.5",
-    "@types/passport": "^1.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "apollo-datasource": "^0.9.0",
-    "apollo-server-core": "^2.25.2",
-    "apollo-server-express": "^2.25.2",
-    "eslint": "7.29.0",
+    "@graphql-tools/schema": "^8.1.2",
+    "@graphql-tools/utils": "^8.1.2",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.7.4",
+    "@types/passport": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "apollo-datasource": "^3.1.0",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^3.4.1",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "microbundle-crl": "^0.13.11",
-    "mongoose": "^5.13.0",
+    "mongoose": "^6.0.2",
     "passport": "^0.4.1",
-    "prettier-eslint": "^12.0.0",
+    "prettier-eslint": "^13.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "4.3.4"
+    "subscriptions-transport-ws": "^0.9.19",
+    "typescript": "4.4.2"
   },
   "peerDependacies": {
-    "apollo-datasource": "^0.9.0",
-    "apollo-server-core": "^2.25.2",
-    "apollo-server-express": "^2.25.2",
-    "mongoose": "^5.13.0",
+    "apollo-datasource": "^3.1.0",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
+    "graphql-subscriptions": "^1.2.1",
+    "subscriptions-transport-ws": "^0.9.19",
+    "mongoose": "^6.0.2",
     "passport": "^0.4.1"
   },
   "peerDevDependacies": {
-    "@types/express": "^4.17.12",
-    "@types/passport": "^1.0.6"
+    "@types/express": "^4.17.13",
+    "@types/passport": "^1.0.7"
   },
   "resolutions": {
-    "apollo-datasource": "^0.9.0",
-    "apollo-server-core": "^2.25.2",
-    "apollo-server-express": "^2.25.2",
-    "mongoose": "^5.13.0",
+    "apollo-datasource": "^3.1.0",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
+    "graphql-subscriptions": "^1.2.1",
+    "subscriptions-transport-ws": "^0.9.19",
+    "mongoose": "^6.0.2",
     "passport": "^0.4.1"
   },
   "repository": "schamane/small-graphql-mongoose-middleware",
