--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,17 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["prettier", "@typescript-eslint", "import"],
+  "plugins": ["prettier", "@typescript-eslint", "import", "unicorn"],
   "extends": [
     "eslint:recommended",
     "esnext",
     "esnext/style-guide",
-    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier",
-    "prettier/@typescript-eslint",
     "plugin:prettier/recommended",
     "plugin:import/typescript"
   ],
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2021,
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
@@ -33,9 +31,14 @@
     ],
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "import/prefer-default-export": "off",
-    "import/extensions": "off",
     "import/no-cycle": "off",
-    "import/no-extraneous-dependencies": ["error", {"peerDependencies": true}],
+    "import/no-extraneous-dependencies": "off",
+    "import/no-unresolved": 2,
+    "import/no-commonjs": 2,
+    "import/extensions": [2, "ignorePackages", {
+      "js": "never",
+      "ts": "never"
+    }],
     "prettier/prettier": [
       "error",
       {
@@ -48,19 +51,25 @@
       }
     ],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"]
+    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/require-await": 2,
+    "sort-imports": "off",
+    "import/no-nodejs-modules": "off"
   },
   "env": {
     "node": true,
     "es6": true,
-    "mocha": true
+    "mocha": true,
+    "es2021": true
   },
   "settings": {
     "import/resolver": {
       "typescript": {
         "project": "./",
-        "paths": ["./src", "./types"],
-        "extensions": [".ts", ".tsx"]
+        "paths": ["./src"],
+        "extensions": [".ts"]
       }
     }
   }
